tests/good/example-17.rat
fn A() -> Void {
  return;
}

fn Main() -> Void {
  return A();
}