tests/bad/example-e11.rat
fn A (x: Int, x: Int) -> Void {
  return;
}

fn Main () -> Void {
  return;
}
